--- a/statics/src/index/index.css
+++ b/statics/src/index/index.css
@@ -1,17 +1,20 @@
 /*
  * Globals
  */
+
 body {
-  font-family: "Source Sans Pro";
+    font-family: "Source Sans Pro";
 }
 
 
 /* Custom default button */
+
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
+    color: #333;
+    text-shadow: none;
+    /* Prevent inheritance from `body` */
 }
 
 
@@ -20,40 +23,41 @@ body {
  */
 
 .cover-container {
-  max-width: 48em;
+    max-width: 48em;
 }
 
 .lead-container {
-  max-width: 32em;
+    max-width: 32em;
 }
 
 .main-icon {
-  width: 33px;
-  height: 33px;
-  content: url("../../../berrypost.svg");
+    width: 33px;
+    height: 33px;
+    content: url("../../../berrypost.svg");
 }
+
 
 /*
  * Header
  */
 
 .nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
+    padding: .25rem 0;
+    font-weight: 700;
+    background-color: transparent;
+    border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+    border-bottom-color: rgba(255, 255, 255, .25);
 }
 
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
+.nav-masthead .nav-link+.nav-link {
+    margin-left: 1rem;
 }
 
 .nav-masthead .active {
-  color: #000;
-  border-bottom-color: #000;
+    color: #000;
+    border-bottom-color: #000;
 }
