support send gRPC with metadata

--- a/statics/src/invoke/invoke.css
+++ b/statics/src/invoke/invoke.css
@@ -93,6 +93,14 @@ body {
     width: 75%;
 }
 
+#metadata>.table {
+    color: gray;
+}
+
+.delete-metadata {
+    cursor: pointer;
+}
+
 
 /* for Safari only */
 
