--- a/statics/templates/$request_panel.html
+++ b/statics/templates/$request_panel.html
@@ -4,7 +4,7 @@
         <div class="input-group-prepend">
             <span class="input-group-text text-primary">Target</span>
         </div>
-        <input id="target-addr" type="text" class="form-control" placeholder="tcp://127.0.0.1:9000" value="{{ .PreferTarget }}">
+        <input id="target-addr" type="text" class="form-control" placeholder="tcp://127.0.0.1:9000" value="">
     </div>
 
     <div class="input-group mb-3 mt-3">
