--- a/statics/templates/$method_list.html
+++ b/statics/templates/$method_list.html
@@ -5,7 +5,7 @@
     {{range $_, $s := .Services}}
     {{range $_, $m := $s.Methods}}
     <a data-grpc-method-name='{{ $m.GRPCMethodName }}' data-input-schema='{{ $m.InputSchema }}'
-        data-service-method='{{ $m.ServiceMethod }}' href="#"
+        data-service-method='{{ $m.ServiceMethod }}' data-prefer-target='{{ $m.PreferTarget }}' href="#"
         class="service-method list-group-item list-group-item-action py-3 border-bottom" aria-current="true">
         <div class="d-flex w-100 align-items-center justify-content-between">
             {{ $m.ServiceMethod }}
