--- a/statics/templates/blueprint.html
+++ b/statics/templates/blueprint.html
@@ -21,7 +21,9 @@
         <div class="row">
             <div class="col-3 d-flex flex-column bg-white method-list">
                 {{template "method-list" .}}
-                {{template "bottom-left" .}}
+                <div class="d-flex justify-content-end p-2 bottom-left">
+                    <button type="button" class="btn btn-success"><i class="bi bi-arrow-repeat" ></i><a href="/management/invoke" style="text-decoration: none;color:white">Proto</a></button>
+                </div>
             </div>
 
             <div class="col-5 d-flex flex-column border-start border-end request-panel">
