--- a/statics/templates/invoke/$invoke_bottom_left.html
+++ b/statics/templates/invoke/$invoke_bottom_left.html
@@ -1,7 +1,7 @@
-{{define "bottom-left"}}
+{{define "invoke-bottom-left"}}
 
 <div class="d-flex justify-content-end p-2 bottom-left">
-    <button type="button" class="btn btn-success">
+    <button type="button" class="btn btn-primary">
         <i class="bi bi-arrow-repeat" ></i>
         <a href="/management/blueprint" style="text-decoration: none;color:white">Blueprint</a>
     </button>
