--- a/statics/templates/invoke/$invoke_bottom_left.html
+++ b/statics/templates/invoke/$invoke_bottom_left.html
@@ -1,9 +1,15 @@
 {{define "invoke-bottom-left"}}
-
-<div class="d-flex justify-content-end p-2 bottom-left">
+<div class="d-flex justify-content-end bottom-left p-2">
+    <div class="btn-group p-1" role="group" aria-label="Basic outlined example">
+        {{if ne .ServiceIdentifier ""}}
+        <button type="button" class="btn btn-outline-success" id="copy-blueprint-modal">
+            <i class="bi bi-folder-symlink"></i>
+        </button>
+        {{end}}
+    </div>
     <button type="button" class="btn btn-primary">
-        <i class="bi bi-arrow-repeat" ></i>
-        <a href="/management/blueprint" style="text-decoration: none;color:white">Blueprint</a>
+        <a href="/management/blueprint" style="text-decoration: none;color:white">
+            <i class="bi bi-arrow-repeat" ></i>Blueprint</a>
     </button>
 </div>
 
