--- a/statics/templates/blueprint/$blueprint_modal.html
+++ b/statics/templates/blueprint/$blueprint_modal.html
@@ -34,7 +34,18 @@
                 <form>
                     <div class="mb-3">
                         <label for="file-name" class="col-form-label">FileName:</label>
-                        <input type="text" class="form-control" id="file-name">
+                        <select multiple class="selectpicker form-control" id="file-name" data-container="body" data-live-search="true" title="Select a number" data-hide-disabled="true" data-actions-box="true" data-virtual-scroll="false">
+                            <option value="0">苹果</option>
+                            <option value="1">菠萝</option>
+                            <option value="2">香蕉</option>
+                            <option value="3">火龙果</option>
+                            <option value="4">梨子</option>
+                            <option value="5">草莓</option>
+                            <option value="6">哈密瓜</option>
+                            <option value="7">椰子</option>
+                            <option value="8">猕猴桃</option>
+                            <option value="9">桃子</option>
+                        </select>
                     </div>
                     <div class="mb-3">
                         <label for="message-text" class="col-form-label">MethodName:</label>
