--- a/statics/templates/blueprint/$blueprint_bottom_left.html
+++ b/statics/templates/blueprint/$blueprint_bottom_left.html
@@ -10,9 +10,9 @@
         <button type="button" class="btn btn-outline-success" id="blueprint-modal">
             <i class="bi bi-folder-plus"></i>
         </button>
-<!--        <button type="button" class="btn btn-outline-success" id="method-modal">-->
-<!--            <i class="bi bi-plus-circle"></i>-->
-<!--        </button>-->
+        <button type="button" class="btn btn-outline-success" id="method-modal">
+            <i class="bi bi-plus-circle"></i>
+        </button>
 <!--        <button id="btnGroupDrop1" type="button" class="btn btn-outline-success dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">-->
 <!--            <i class="bi bi-three-dots"></i>-->
 <!--        </button>-->
