--- a/statics/templates/blueprint/$blueprint_modal.html
+++ b/statics/templates/blueprint/$blueprint_modal.html
@@ -31,27 +31,21 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form>
-                    <div class="mb-3">
-                        <label for="file-name" class="col-form-label">FileName:</label>
-                        <select multiple class="selectpicker form-control" id="file-name" data-container="body" data-live-search="true" title="Select a number" data-hide-disabled="true" data-actions-box="true" data-virtual-scroll="false">
-                            <option value="0">苹果</option>
-                            <option value="1">菠萝</option>
-                            <option value="2">香蕉</option>
-                            <option value="3">火龙果</option>
-                            <option value="4">梨子</option>
-                            <option value="5">草莓</option>
-                            <option value="6">哈密瓜</option>
-                            <option value="7">椰子</option>
-                            <option value="8">猕猴桃</option>
-                            <option value="9">桃子</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="message-text" class="col-form-label">MethodName:</label>
-                        <textarea class="form-control" id="message-text"></textarea>
-                    </div>
-                </form>
+                <div class="mb-3">
+                    <label for="file-name" class="col-form-label">FileName:</label>
+                    <br>
+                    <select name="file-name" id="file-name" class="selectpicker form-control" data-live-search="true" title="Select a file">
+                    {{range $_, $pf := .ProtoFiles}}
+                    <option value="{{$pf.Meta.ImportPath}}">{{ $pf.Filename }}</option>
+                    {{end}}
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="new-method-name" class="col-form-label">MethodName:</label>
+                    <br>
+                    <select multiple name="new-method-name" id="new-method-name" class="selectpicker form-control" data-live-search="true" title="Select methods" data-hide-disabled="true" data-actions-box="true" data-virtual-scroll="false">
+                    </select>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
