--- a/statics/templates/invoke/$invoke_bottom_left.html
+++ b/statics/templates/invoke/$invoke_bottom_left.html
@@ -2,6 +2,9 @@
 <div class="d-flex justify-content-end bottom-left p-2">
     <div class="btn-group p-1" role="group" aria-label="Basic outlined example">
         {{if ne .ServiceIdentifier ""}}
+        <button id="saveto-blueprint-modal" class="btn btn-outline-success" type="button">
+            <i class="bi bi-save"></i>
+        </button>
         <button type="button" class="btn btn-outline-success" id="copy-blueprint-modal">
             <i class="bi bi-folder-symlink"></i>
         </button>
