--- a/statics/templates/register.html
+++ b/statics/templates/register.html
@@ -19,7 +19,7 @@
       <div class="m-auto" id="main-image" onclick="window.location.href='/'">
       </div>
     </div>
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 fw-normal">Create an account</h1>
 
     <div class="form-floating">
       <input type="text" class="form-control" id="userid" placeholder="Userid">
@@ -30,8 +30,8 @@
       <label for="password">Password</label>
     </div>
 
-    <button class="w-100 btn btn-lg btn-primary p-1" type="button" id="sign-in">Sign in</button>
-    <a class="w-100 p-1" href="/management/register">Create an account</a>
+    <button class="w-100 btn btn-lg btn-primary p-1" type="button" id="sign-up">Sign up</button>
+    <a class="w-100 p-1" href="/management/login">Already have an account?</a>
     <p class="mt-5 mb-3 text-muted">&copy;2021–2022</p>
   </form>
 </main>
