--- a/statics/templates/blueprint/$blueprint_modal.html
+++ b/statics/templates/blueprint/$blueprint_modal.html
@@ -90,5 +90,25 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="shareBlueprintModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="shareBlueprintModalLabel">Share Blueprint</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="url" placeholder="" aria-label="url" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="button" id="copy-url">COPY</button>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Done</button>
+            </div>
+        </div>
+    </div>
+</div>
 {{end}}
 
