--- a/statics/templates/invoke/$invoke_bottom_left.html
+++ b/statics/templates/invoke/$invoke_bottom_left.html
@@ -11,11 +11,10 @@
         </button>
         {{end}}
         {{end}}
+        <button type="button" class="btn btn-primary">
+            <a href="/management/blueprint" style="text-decoration: none;color:white"><i class="bi bi-arrow-repeat" ></i>Blueprint</a>
+        </button>
     </div>
-    <button type="button" class="btn btn-primary">
-        <a href="/management/blueprint" style="text-decoration: none;color:white">
-            <i class="bi bi-arrow-repeat" ></i>Blueprint</a>
-    </button>
 </div>
 
 {{end}}
