--- a/statics/templates/blueprint/$blueprint_bottom_left.html
+++ b/statics/templates/blueprint/$blueprint_bottom_left.html
@@ -1,10 +1,17 @@
 {{define "blueprint-bottom-left"}}
 
 <div class="d-flex justify-content-end bottom-left p-2">
+    <div class="btn-group p-1 justify-content-start" role="group" aria-label="Basic outlined example">
+        {{if ne .BlueprintIdentifier ""}}
+        <button type="button" class="btn btn-outline-primary" id="share-blueprint">
+            <i class="bi bi-share"></i>
+        </button>
+        {{end}}
+    </div>
     <div class="btn-group p-1" role="group" aria-label="Basic outlined example">
         {{if ne .BlueprintIdentifier ""}}
         <button id="delete-method-modal" class="btn btn-outline-danger" type="button">
-            <i class="bi bi-file-earmark-x"></i>
+            <i class="bi bi-x-circle"></i>
         </button>
         <button type="button" class="btn btn-outline-danger" id="delete-blueprint-modal">
             <i class="bi bi-folder-minus"></i>
@@ -16,17 +23,10 @@
         <button type="button" class="btn btn-outline-success" id="blueprint-modal">
             <i class="bi bi-folder-plus"></i>
         </button>
-<!--        <button id="btnGroupDrop1" type="button" class="btn btn-outline-success dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">-->
-<!--            <i class="bi bi-three-dots"></i>-->
-<!--        </button>-->
-<!--        <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">-->
-<!--            <li><a class="dropdown-item" href="#">Delete</a></li>-->
-<!--            <li><a class="dropdown-item" href="#">..</a></li>-->
-<!--        </ul>-->
+        <button type="button" class="btn btn-primary">
+            <a href="/management/invoke" style="text-decoration: none;color:white"><i class="bi bi-arrow-repeat"></i>Proto</a>
+        </button>
     </div>
-    <button type="button" class="btn btn-primary">
-        <a href="/management/invoke" style="text-decoration: none;color:white"><i class="bi bi-arrow-repeat"></i>Proto</a>
-    </button>
 </div>
 {{end}}
 
