--- a/statics/templates/public/$public_status_bar.html
+++ b/statics/templates/public/$public_status_bar.html
@@ -1,23 +1,11 @@
-{{define "blueprint-status-bar"}}
+{{define "public-status-bar"}}
 
 <div class="row border-top border-bottom">
     <div class="col-4 d-flex align-items-center">
         <div class="dropdown">
-            <button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="serviceMenu"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                {{if eq .BlueprintIdentifier ""}}
-                [Select To Start]
-                {{else}}
+            <button class="btn btn-primary btn-sm" type="button" id="from-blueprint-name">
                 {{ .BlueprintIdentifier }}
-                {{end}}
             </button>
-            <ul id="serviceMenuContent" class="dropdown-menu scrollable-menu" role="menu" aria-labelledby="serviceMenu">
-                <input type="text" class="form-control" placeholder="Search..." id="serviceMenuSearch">
-                {{range $_, $pf := .Blueprints}}
-                <li><a class="dropdown-item" href="/management/blueprint/{{$pf}}">{{ $pf }}</a>
-                </li>
-                {{end}}
-            </ul>
         </div>
     </div>
 
@@ -34,7 +22,9 @@
 
     <div class="col-4">
         <div class="d-grid gap-2 d-md-flex justify-content-md-end p-1">
-            {{if ne .UserId ""}}
+            {{if eq .UserId ""}}
+            <a class="btn btn-outline-primary" href="/management/login" role="button">Login</a>
+            {{else}}
             <div class="dropdown">
                 <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                     {{.UserId}}
