--- a/statics/templates/blueprint/$blueprint_status_bar.html
+++ b/statics/templates/blueprint/$blueprint_status_bar.html
@@ -40,6 +40,9 @@
                     {{.UserId}}
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    {{if eq .UserId "admin"}}
+                    <li><a class="dropdown-item" href="/admin/dashboard">dashboard</a></li>
+                    {{end}}
                     <li><a class="dropdown-item" id="sign-out" href="#">Sign out</a></li>
                 </ul>
             </div>
